--- a/app/global.css
+++ b/app/global.css
@@ -184,9 +184,29 @@ table {
 
 /* Home page animations */
 
+.link {
+  position: relative;
+}
+
+.link::before {
+  content: '';
+  position: absolute;
+  height: 3px;
+  background-color: #b45309;
+  width: 0;
+  left: 0;
+  top: 1.5rem;
+  display: block;
+  transition: all .2s ease-in;
+}
+
+.link:hover::before {
+  width: 100%;
+}
+
 .fadeIn {
   opacity: 0;
-  animation: fades-in 1.2s ease-in forwards .5s;
+  animation: fades-in .5s ease-in forwards .5s;
 }
 
 @keyframes fades-in {
@@ -202,7 +222,7 @@ table {
 
 .fadeIn2 {
   opacity: 0;
-  animation: fades-in-2 1.2s ease-in forwards;
+  animation: fades-in-2 .5s ease-in forwards;
 }
 
 @keyframes fades-in-2 {
